[project]
name = "adaptive-planner-rl"
version = "0.1.0"
description = "Adaptive Planner RL Environment"
authors = [{ name = "Soyam Raj" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "numpy",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
start = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
